Added ROLE_USER to authorization